# document-buddy

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-handoff.md  feishu-quickstart.md  feishu-visible-wiki.md  mcp-toolkit.md  platform-capabilities.md  wiki-schema.md
examples/: README.md  run_offline_demo.py
examples/offline_feishu_sources/: chat-excerpt.md  meeting-note.md  requirements.md
scripts/: sync_to_feishu.py
tests/: test_edge_cases.py  test_retrieval.py  test_toolkit_smoke.py  test_utils.py
work_memory/: __init__.py  compiler.py  config.py  db.py  engine.py  extractors.py  mcp_server.py  retrieval.py  server.py  storage.py  toolkit.py  utils.py
work_memory/adapters/: __init__.py  feishu.py
