[project]
name = "document-buddy"
version = "0.1.0"
description = "文档搭子（Document Buddy）：无服务端的飞书优先 MCP 项目文档记忆工具包。"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Document Buddy Contributors" }]
dependencies = []

[project.optional-dependencies]
parsers = [
  "beautifulsoup4>=4.12",
  "pypdf>=4",
  "python-docx>=1.1",
]

[project.scripts]
document-buddy-mcp = "work_memory.mcp_server:main"

[tool.ruff]
line-length = 100
